# pystubber

./: .gitignore  README.md  pyproject.toml  stubber.py
pystubber/: __init__.py  cli.py  stubber.py
